--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -22,7 +22,7 @@ requirements:
   host:
     - pip
     - python ${{ python_min }}
-    - setuptools
+    - hatchling
   run:
     - python >=${{ python_min }}
     - pytorch >=2.0.0
